# host

./: .gitignore  Cargo.toml
crates/component/: Cargo.toml
crates/component-macro/: Cargo.toml
crates/component-macro/src/: lib.rs
crates/component/src/: application.rs  callsite.rs  component.rs  context.rs  diff.rs  dom.rs  environment.rs  events.rs  hooks.rs  lib.rs  macros.rs  parse.rs  reducer.rs  render.rs  renderer.rs  state.rs  store.rs
crates/vdom/: Cargo.toml
crates/vdom/src/: dom.rs  lib.rs  parse.rs  render.rs
crates/vdom/tests/: render.rs
examples/counter/: Cargo.toml
examples/counter/src/: component.rs  lib.rs  reducer.rs
examples/counter/www/: bootstrap.js  package-lock.json
src/: lib.rs
www/: index.js  package-lock.json  package.json
