[package]
name = "host-component"
version = "0.0.2"
authors = ["rickihastings"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
virtual-dom-rs = "0.6.10"
illicit = "0.9.0"
serde = "1.0.103"
serde_json = "1.0.42"
comp_state = "0.0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Attr',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCollection',
  'HtmlElement',
  'NamedNodeMap',
  'Node',
  'NodeList',
  'Window'
]
