[package]
name = "host-component"
version = "0.0.2"
authors = ["rickihastings"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
virtual-dom-rs = "0.6.10"
state = { version = "0.2", features = ["tls"] }
fnv = "1.0.6"
polymap = "0.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Attr',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCollection',
  'HtmlElement',
  'NamedNodeMap',
  'Node',
  'NodeList',
  'Window'
]
