[package]
name = "host-vdom"
version = "0.1.0"
authors = ["rickihastings"]
edition = "2018"

[dependencies]
treexml = "0.7"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window'
]
