[package]
name = "host-vdom"
version = "0.1.0"
authors = ["rickihastings"]
edition = "2018"

[dependencies]
treexml = "0.7"
wasm-bindgen = "0.2"
host-core = {path = "../core"}

[dev-dependencies]
wasm-bindgen-test = "0.2.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window'
]
